--- a/dnd-upgrade/manifest.json
+++ b/dnd-upgrade/manifest.json
@@ -1,29 +1,35 @@
 {
-  "name": "My App",
-  "short_name": "My App",
-    "icons": [{
-      "src": "images/app-icon-32.png",
-      "type": "image/png",
-      "sizes": "32x32"
-    }, {
-      "src": "images/app-icon.svg",
-      "sizes": "128x128",
-      "type": "image/svg"
-    }, {
-      "src": "images/app-icon-144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    }, {
-      "src": "images/app-icon.svg",
-      "sizes": "192x192",
-      "type": "image/svg"
-    },{
-      "src": "images/app-icon.svg",
-      "sizes": "384x384",
-      "type": "image/svg"
-    }],
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#3f51b5",
-  "theme_color": "#3f51b5"
+    "name": "Sheets 'n Dices",
+    "short_name": "Sheets 'n Dices",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#FFF",
+    "theme_color": "#673AB7",
+    "icons": [
+        {
+            "src": "images/icon_48.png",
+            "type": "image/png",
+            "sizes": "48x48"
+        },
+        {
+            "src": "images/icon_72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "images/icon_96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "images/icon_144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "sizes": "192x192",
+            "src": "images/icon_192.png",
+            "type": "image/png"
+        }
+    ]
 }
